--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,35 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!--
+    CS 4640 Server URL: 
+      - https://cs4640.cs.virginia.edu/nkm5gz/sprint1/
+
+    ======== CONTRIBUTIONS ========
+    (Since we are building in Angular from the start, we can't add meta tags to components. Please see below for who worked on which part)
+    (See Github repository @ https://github.com/neilmenon/mainstreamify for components in src/app)
+    - Footer: Neil & Harrison
+    - Header: Neil
+    - Home: Neil
+    - Profile: Harrison
+    - User Settings: Neil & Harrison
+
+    === PLEASE SEE COMPONENTS' RESPECTIVE .CSS FILES FOR CSS RULES FOR THAT COMPONENT ===
+     - we also have styles in styles.css
+
+  -->
   <meta charset="utf-8">
   <title>Mainstreamify</title>
-  <base href="/">
+  <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Neil Menon and Harrison Li">
+  <meta name="description" content="Spotify mainstream calculator">
+  <meta name="keywords" content="spotify, mainstream, music">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/f7fcebb168.js" crossorigin="anonymous"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
