--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,25 @@
+<!--
+  CS 4640 Server URL: 
+    - https://cs4640.cs.virginia.edu/nkm5gz/sprint2/
+
+  ======== CONTRIBUTIONS ========
+  (Since we are building in Angular from the start, we can't add meta tags to components. Please see below for who worked on which part)
+  (See Github repository @ https://github.com/neilmenon/mainstreamify for components in src/app)
+  - Footer: Neil & Harrison
+  - Header: Neil
+  - Home: Neil
+  - Profile: Harrison
+  - User Settings: Neil & Harrison
+
+  ===== SPRINT 2 CODING DONE VIA VSCODE LIVE SHARE =====
+
+  === PLEASE SEE COMPONENTS' RESPECTIVE .CSS FILES FOR CSS RULES FOR THAT COMPONENT ===
+   - we also have styles in styles.css
+
+-->
 <!doctype html>
 <html lang="en">
 <head>
-  <!--
-    CS 4640 Server URL: 
-      - https://cs4640.cs.virginia.edu/nkm5gz/sprint1/
-
-    ======== CONTRIBUTIONS ========
-    (Since we are building in Angular from the start, we can't add meta tags to components. Please see below for who worked on which part)
-    (See Github repository @ https://github.com/neilmenon/mainstreamify for components in src/app)
-    - Footer: Neil & Harrison
-    - Header: Neil
-    - Home: Neil
-    - Profile: Harrison
-    - User Settings: Neil & Harrison
-
-    === PLEASE SEE COMPONENTS' RESPECTIVE .CSS FILES FOR CSS RULES FOR THAT COMPONENT ===
-     - we also have styles in styles.css
-
-  -->
   <meta charset="utf-8">
   <title>Mainstreamify</title>
   <base href="./">
