fix bug when user doesn't have profile pic + contributions
Co-authored-by: Harrison Li <HarrisonLi2@users.noreply.github.com>

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,16 @@
   - Profile: Harrison
   - User Settings: Neil & Harrison
 
-  ===== SPRINT 2 CODING DONE VIA VSCODE LIVE SHARE =====
+  ===== SPRINT 2/3 CODING DONE VIA VSCODE LIVE SHARE =====
 
   === PLEASE SEE COMPONENTS' RESPECTIVE .CSS FILES FOR CSS RULES FOR THAT COMPONENT ===
    - we also have styles in styles.css
+
+
+  ===== SPRINT 3 - CONTRIBUTIONS =====
+  - Backend API - Harrison & Neil
+  - Database schema - Neil & Harrison
+  - 
 
 -->
 <!doctype html>
