toggle colors with jquery + updated schema

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
   - Database schema - Neil & Harrison
   - 
 
+  ===== SPRINT 4 Contributions =====
+
+
 -->
 <!doctype html>
 <html lang="en">
@@ -41,5 +44,7 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
 </body>
 </html>
