--- a/src/index.html
+++ b/src/index.html
@@ -46,21 +46,24 @@
   <app-root></app-root>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script>
-    $("toggleTheme").click(function() {
-      if($("nav").hasClass("navlight")){
-        console.log(document.getElementById("nav").className)
-        $("nav").removeClass("navlight")
-        $("nav").addClass("navdark")
-        console.log(document.getElementById("nav").className)
-      }
-      else if($("nav").hasClass("navdark")){
-        $("nav").removeClass("navdark")
-        $("nav").addClass("navlight")
-      }
-      else{
-        $("nav").addClass("navdark")
-      }
-    })
+    window.addEventListener('DOMContentLoaded', (event) => {
+        $("#toggleTheme").click(function() {
+          if($("mat-toolbar").hasClass("navlight")){
+            
+            $("mat-toolbar").removeClass("navlight")
+            $("mat-toolbar").addClass("navdark")
+            $("#headertext").removeClass("blacktext")
+          }
+          else if($("mat-toolbar").hasClass("navdark")){
+            $("mat-toolbar").removeClass("navdark")
+            $("mat-toolbar").addClass("navlight")
+            $("#headertext").addClass("blacktext")
+          }
+          else{
+            $("mat-toolbar").addClass("navdark")
+          }
+        });
+    });
 </script>
 </body>
 </html>
