config and contribs

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!--
   CS 4640 Server URL: 
-    - https://cs4640.cs.virginia.edu/nkm5gz/sprint2/
+    - https://cs4640.cs.virginia.edu/nkm5gz/sprint4/
 
   ======== CONTRIBUTIONS ========
   (Since we are building in Angular from the start, we can't add meta tags to components. Please see below for who worked on which part)
@@ -23,7 +23,13 @@
   - 
 
   ===== SPRINT 4 Contributions =====
-
+  - DOM manipulation / jQuery (Harrison)
+  - Form validations (Harrison)
+  - Displaying recent tracks HTML (Neil)
+  - Settings page form submission (Neil & Harrison)
+  - Backend DB changes to schema (Harrison)
+  - Backend endpoint for recent tracks (Neil)
+  - passing data b/w Angular components (Neil)
 
 -->
 <!doctype html>
