--- a/src/index.html
+++ b/src/index.html
@@ -31,12 +31,17 @@
   - Backend endpoint for recent tracks (Neil)
   - passing data b/w Angular components (Neil)
 
+  ===== SPRINT 5 Contributions =====
+  - Playing status (Neil)
+  - Top artists/albums (Neil)
+  - DB schema changes (Harrison)
+
 -->
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Mainstreamify</title>
+  <title>Spotify Dashboard</title>
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Neil Menon and Harrison Li">
